
2009-01-19 Patrick Winnertz <winnie@debian.org>

	* edit/edit.h: Add two more ints
	* src/setup.c: Add keybinding to disable tab highlighting

2009-01-18 Patrick Winnertz <winnie@debian.org>

	* edit/editdraw.c: Moved var into if clause as it's only used
	there
	* edit/editlock.c: Removed unnecessary arguement to if condition
	* src/cmd.c: Removed unused pointer
	* src/hotlist.c: Removed unused function save_group
	* src/main.c: Removed unused function do_mc_filename_rename
	* src/util.c: Removed unused struct whentm

2009-01-14 Slava Zanko <slavazanko@gmail.com>

	* lib/mc.ext.in: change filemask for recognize 7z-files
	* vfs/extfs/u7z: 
	  - change only LC_DATE global variable for correct work with arhive;
	  - add sorting by filename in output of list files

2009-01-12 Patrick Winnertz <winnie@debian.org>

	* AUTHORS: Added Enrico Weigelt, Slava Zanko and 
	Patrick Winnertz as authors 

2009-01-11 Enrico Weigelt, metux ITS <weigelt@metux.de>

	* FAQ HACKING README man/*: new HQ url
	* syntax/awk.syntax: added awk syntax file
	* configure.ac: replaced obsolete autoconf macros AC_GNU_SOURCE 
	  AC_AIX AC_MINIX by AC_USE_SYSTEM_EXTENSIONS

2009-01-11 Patrick Winnertz <winnie@debian.org>

	* syntax/pascal.syntax: Added syntax highlighting for 
	  some delphi keywords

2009-01-10  Enrico Weigelt, metux ITS <weigelt@metux.de>

	* syntax/Makefile.am syntax/Syntax syntax/haskell.syntax:
	added syntax definition for Haskell (taken from rhclub-tree)
	* syntax: added ebuild Syntax defition (taken from rhclub-tree)

2008-12-18  Roland Illig  <roland.illig@gmx.de>

	* doc/mcedit.1: Documented the newly added filename:lineno
	invocation method.

2008-02-19  Pavel Roskin  <proski@gnu.org>

	* doc/hu/mc.1.in: Fix description for M-u and M-H.  Reported by
	Bozo Lajos.

2008-01-06  Roland Illig  <roland.illig@gmx.de>

	* FAQ: Answered the slow startup related to old Samba code.
	(Closes: #21959)

2007-10-19  Pavel Tsekov  <ptsekov@gmx.net>

	* NEWS: Update for 4.6.2.
