@@ -11,6 +11,8 @@ u7z
 ualz
 # For arj usage you need a special patch to unarj (see unarj.diff)
 uarj
+uarc
+uace
 
 # ar is used for static libraries
 uar
@@ -27,6 +29,9 @@ lslR
 
 # Hewlett Packard calculator
 hp48:
+
+# Commodore 64/128 d64/D64 files
+uc1541
 
 # Break patches into chunks
 patchfs
